--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -8,4 +8,34 @@
         android:id="@+id/title"
         layout="@layout/title_bar"/>
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/title"
+        android:background="@drawable/biz_plugin_weather_shenzhen_bg"
+        android:orientation="vertical">
+
+        <!-- 今日天气信息 -->
+        <RelativeLayout
+            android:id="@+id/weather_today"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp">
+            <!-- 实时天气信息 -->
+            <include
+                android:id="@+id/weather_current"
+                layout="@layout/weather_cur"/>
+            <!-- PM2.5 -->
+            <include layout="@layout/weather_pm25"/>
+            <!-- 今日天气概况 -->
+            <include layout="@layout/weather_today"/>
+
+        </RelativeLayout>
+        <!-- 未来七天天气信息 -->
+
+        <!-- 其他信息 -->
+        
+
+    </LinearLayout>
+
 </RelativeLayout>
