--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -9,24 +9,24 @@
 
     <!-- city-->
     <ImageView
-        android:id="@+id/sity"
+        android:id="@+id/city_manager"
         android:layout_width="45.0dip"
         android:layout_height="45.0dip"
         android:src="@drawable/title_city"/>
 
     <ImageView
-        android:id="@+id/sity_seperator"
+        android:id="@+id/city_seperator"
         android:layout_width="1.0dip"
         android:layout_height="40dip"
         android:layout_marginTop="2dp"
-        android:layout_toRightOf="@id/sity"
+        android:layout_toRightOf="@id/city_manager"
         android:background="#A71717"/>
 
     <TextView
         android:id="@+id/title_city_name"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_toRightOf="@id/sity_seperator"
+        android:layout_toRightOf="@id/city_seperator"
         android:gravity="center_vertical"
         android:paddingLeft="5dip"
         android:text="北京天气"
